vlib/v/checker/tests/go_mut_receiver.out
vlib/v/checker/tests/go_mut_receiver.v:14:5: error: method in `go` statement cannot have non-reference mutable receiver 
   12 |         a: 0
   13 |     }
   14 |     go x.change()
      |        ^
   15 | }
